# mailmind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  processed_emails.json  pyproject.toml
backend/api/: main.py
backend/crew/: agents.py  crew.py  tasks.py  tools.py
backend/db/: models.py
backend/tools/: approval_tool.py  calendar_tool.py  db_tool.py  twilio_tool.py
backend/workers/: celery_app.py  tasks.py
crew/: agents.py  crew.py  tasks.py  tools.py
db/: database.py  models.py
tools/: approval_tool.py  db_tool.py  json_tool.py
workers/: celery_app.py  tasks.py
workflow/: graph.py  nodes.py  state.py
