[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "crewai>=1.14.5",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-search-results>=2.4.2",
    "langchain-community>=0.4.1",
    "langgraph>=1.2.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.24",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
]
